unpackaged/main/default/objects/CMPL123CME__EMDR_Layout_Config__c/CMPL123CME__EMDR_Layout_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>EMDR Layout Button and Related List Settings</description>
    <label>EMDR Layout Config</label>
</CustomObject>