unpackaged/main/default/objects/CMPL123CME__EMDR_Layout_Config__c/fields/CMPL123CME__Behavior__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Behavior__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Behavior (Open in a same window)</description>
        <inlineHelpText>Behavior (Open in a same window)</inlineHelpText>
        <label>Behavior (Open in a same window)</label>
        <type>Checkbox</type>
    </CustomField>