unpackaged/main/default/objects/CMPL123CME__EMDR_Layout_Config__c/fields/CMPL123CME__FieldSet_API_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__FieldSet_API_Name__c</fullName>
        <description>Child/Related Object FieldSet API Name</description>
        <inlineHelpText>Child/Related Object FieldSet API Name</inlineHelpText>
        <label>FieldSet API Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>