unpackaged/main/default/objects/CMPL123CME__EMDR_Layout_Config__c/fields/CMPL123CME__Is_Active__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Uncheck if you want to hide it</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>