unpackaged/main/default/objects/CMPL123CME__EMDR_Layout_Config__c/fields/CMPL123CME__Order__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>