unpackaged/main/default/objects/CMPL123CME__EMDR_Layout_Config__c/fields/CMPL123CME__Record_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Record_Type__c</fullName>
        <description>Specify Record Type Name(s) with comma separated (Ex: Initial,Supplemental)</description>
        <inlineHelpText>Specify Record Type Name(s) with comma separated (Ex: Initial,Supplemental)</inlineHelpText>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>