unpackaged/main/default/objects/CMPL123CME__EMDR_Layout_Config__c/fields/CMPL123CME__Related_Api__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Related_Api__c</fullName>
        <description>Related Object API</description>
        <inlineHelpText>Specify Related (Child) Object API</inlineHelpText>
        <label>Related Object API</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>