unpackaged/main/default/objects/CMPL123CME__EMDR_Layout_Config__c/fields/CMPL123CME__Show_Related_List_New_Button__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Show_Related_List_New_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show Related List New Button</description>
        <inlineHelpText>Uncheck to hide the Related List New Button</inlineHelpText>
        <label>Show Related List New Button</label>
        <type>Checkbox</type>
    </CustomField>