unpackaged/main/default/objects/CMPL123CME__EMDR_Layout_Config__c/fields/CMPL123CME__Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Type__c</fullName>
        <description>"Button" or "List"</description>
        <inlineHelpText>Specify "Button" or "List"</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>