unpackaged/main/default/objects/CMPL123CME__EMDR_Layout_Config__c/fields/CMPL123CME__URL__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__URL__c</fullName>
        <description>Button URL or Field Id</description>
        <inlineHelpText>Specify Button URL (Ex: for any apex pages start with /apex/&lt;pagename&gt;)
or specify related lookup field Id (normally starts with 00N)</inlineHelpText>
        <label>Button URL / Field Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>