unpackaged/main/default/objects/CMPL123CME__EMDR_Layout_Config__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Behavior__c</columns>
        <columns>CMPL123CME__URL__c</columns>
        <columns>CMPL123CME__FieldSet_API_Name__c</columns>
        <columns>CMPL123CME__Is_Active__c</columns>
        <columns>CMPL123CME__Order__c</columns>
        <columns>CMPL123CME__Record_Type__c</columns>
        <columns>CMPL123CME__Related_Api__c</columns>
        <columns>CMPL123CME__Show_Related_List_New_Button__c</columns>
        <columns>CMPL123CME__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>